# codebooks

./: .gitignore  LICENSE  NEWS.md  README.md  setup.cfg  setup.py
bootstrap/: config.json
bootstrap/css/: bootstrap.css  bootstrap.min.css
codebooks/: __init__.py  __main__.py  html.py  variable.py
scripts/: codebooks
src/codebooks/: __init__.py  __main__.py  html.py  log.py  variable.py
test/: benchmark.py  dataset.py  desc.csv
