[metadata]
name = codebooks
author = Mark Howison
author_email = mark@howison.org
url = https://github.com/mhowison/codebooks
version = attr: codebooks.__version__
license = BSD
description = Automatic generation of codebooks from dataframes.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
install_requires = 
    htmlmin
    pandas
python_requires = >= 3.8
setup_requires = setuptools

[options.package_data]
    codebooks = css/*

[options.entry_points]
console_scripts =
    codebooks = codebooks.__main__:main
